--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -10,3 +10,19 @@
 
 .top-bar .active-link {
   font-weight: bold; }
+
+.clock {
+  align-items: center;
+  background-color: #B5d0E2;
+  border: 2px solid #2099E8;
+  border-radius: 50%;
+  display: flex;
+  height: 14rem;
+  justify-content: center;
+  margin: 4rem auto;
+  width: 14rem; }
+
+.clock-text {
+  color: white;
+  font-size: 2.25rem;
+  font-weight: 300; }
