--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -5,3 +5,9 @@ $gray: #333333!important;
 // Nav colors:
 $nav-background: $gray;
 $nav-text-color: white;
+
+// clock variables:
+
+$clock-text-color: white;
+$clock-bg-color: #B5d0E2;
+$clock-border-color: #2099E8;
