--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,8 @@
 @import "./base/variables";
+
+// Components:
 @import "./components/nav";
 @import "./components/clock";
 @import "./components/controls";
 @import "./components/page-title";
+
